--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,26 @@
 # Logs
-logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
 pnpm-debug.log*
-lerna-debug.log*
 
+# Dependencies
 node_modules
+.pnpm-store/
+
+# Build
 dist
-dist-ssr
-*.local
+build
+
+# Editor
+.vscode
+.idea
+
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Editor directories and files
 .vscode/*
